# flocate

./: CMakeLists.txt  README.md  build.cpp  db-format.h  interval-set.cpp  interval-set.h  kgram-db.cpp  kgram-db.h  kgram-db_test.cpp  locate.cpp
